--- a/AptitudeEngine/AptitudeEngine.csproj
+++ b/AptitudeEngine/AptitudeEngine.csproj
@@ -62,6 +62,7 @@
     <Compile Include="AptInput.cs" />
     <Compile Include="Asset.cs" />
     <Compile Include="ComponentEventChain.cs" />
+    <Compile Include="Components\PolyRenderer.cs" />
     <Compile Include="Components\TileScreen.cs" />
     <Compile Include="DisplayDevice.cs" />
     <Compile Include="Enums\GameWindowFlags.cs" />
@@ -93,6 +94,7 @@
     <Compile Include="Logging\Modules\LoggerModule.cs" />
     <Compile Include="Logging\Modules\ModuleManager.cs" />
     <Compile Include="OrderedHashSet.cs" />
+    <Compile Include="PolyPoint.cs" />
     <Compile Include="ScreenHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Texture2D.cs" />
