Reformatted a large chunk of the code and fixed several naming violations. Also made some misc tweaks to the animation editor form.

--- a/SpritesheetTester/SpritesheetTester/SpritesheetTester.csproj
+++ b/SpritesheetTester/SpritesheetTester/SpritesheetTester.csproj
@@ -52,16 +52,16 @@
   <ItemGroup>
     <Compile Include="AnimatedFramePosition.cs" />
     <Compile Include="Animation.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="AnimEditorForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="AnimEditorForm.Designer.cs">
+      <DependentUpon>AnimEditorForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="AnimEditorForm.resx">
+      <DependentUpon>AnimEditorForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
