--- a/AptitudeEngine/AptitudeEngine.csproj
+++ b/AptitudeEngine/AptitudeEngine.csproj
@@ -62,6 +62,8 @@
     <Compile Include="AptInput.cs" />
     <Compile Include="Asset.cs" />
     <Compile Include="ComponentEventChain.cs" />
+    <Compile Include="Components\Flair.cs" />
+    <Compile Include="Components\FlairCanvas.cs" />
     <Compile Include="Components\PolyRenderer.cs" />
     <Compile Include="Components\TileScreen.cs" />
     <Compile Include="DisplayDevice.cs" />
