--- a/AptitudeEngine/AptitudeEngine.csproj
+++ b/AptitudeEngine/AptitudeEngine.csproj
@@ -62,6 +62,7 @@
     <Compile Include="AptInput.cs" />
     <Compile Include="Asset.cs" />
     <Compile Include="ComponentEventChain.cs" />
+    <Compile Include="Components\Flairs\FButton.cs" />
     <Compile Include="Components\Flairs\Flair.cs" />
     <Compile Include="Components\Flairs\FlairCanvas.cs" />
     <Compile Include="Components\Input\CursorComponent.cs" />
