NEW Flair basics, #15

--- a/AptitudeEngine/AptitudeEngine.csproj
+++ b/AptitudeEngine/AptitudeEngine.csproj
@@ -63,8 +63,7 @@
     <Compile Include="Asset.cs" />
     <Compile Include="ComponentEventChain.cs" />
     <Compile Include="Components\Flairs\FButton.cs" />
-    <Compile Include="Components\Flairs\Flair.cs" />
-    <Compile Include="Components\Flairs\FlairCanvas.cs" />
+    <Compile Include="Components\Flairs\FPanel.cs" />
     <Compile Include="Components\Visuals\PolyRenderer.cs" />
     <Compile Include="Components\Tiling\TileScreen.cs" />
     <Compile Include="DisplayDevice.cs" />
