--- a/AptitudeEngine/AptitudeEngine.csproj
+++ b/AptitudeEngine/AptitudeEngine.csproj
@@ -15,7 +15,7 @@
     <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x86</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -37,6 +37,9 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="irrKlang.NET4">
+      <HintPath>..\..\..\irrKlang.NET4.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
@@ -62,10 +65,11 @@
     <Compile Include="AptInput.cs" />
     <Compile Include="Asset.cs" />
     <Compile Include="ComponentEventChain.cs" />
-    <Compile Include="Components\Flairs\FButton.cs" />
-    <Compile Include="Components\Flairs\FPanel.cs" />
+    <Compile Include="Components\Flairs\Flair.cs" />
+    <Compile Include="Components\Visuals\ParallaxManager.cs" />
     <Compile Include="Components\Visuals\PolyRenderer.cs" />
     <Compile Include="DisplayDevice.cs" />
+    <Compile Include="Enums\DebugMode.cs" />
     <Compile Include="Enums\GameWindowFlags.cs" />
     <Compile Include="Enums\InputCode.cs" />
     <Compile Include="Enums\InputState.cs" />
