--- a/AptitudeEngine/AptitudeEngine.csproj
+++ b/AptitudeEngine/AptitudeEngine.csproj
@@ -65,11 +65,16 @@
     <Compile Include="AptInput.cs" />
     <Compile Include="Asset.cs" />
     <Compile Include="ComponentEventChain.cs" />
+    <Compile Include="Components\Flairs\Button.cs" />
+    <Compile Include="Components\Flairs\CheckBox.cs" />
     <Compile Include="Components\Flairs\Flair.cs" />
+    <Compile Include="Components\Flairs\Label.cs" />
+    <Compile Include="Components\Flairs\Slider.cs" />
     <Compile Include="Components\Visuals\ParallaxManager.cs" />
     <Compile Include="Components\Visuals\PolyRenderer.cs" />
+    <Compile Include="DebugHandler.cs" />
+    <Compile Include="DrawOptions.cs" />
     <Compile Include="DisplayDevice.cs" />
-    <Compile Include="Enums\DebugMode.cs" />
     <Compile Include="Enums\GameWindowFlags.cs" />
     <Compile Include="Enums\InputCode.cs" />
     <Compile Include="Enums\InputState.cs" />
