--- a/AptitudeEngine/AptitudeEngine.csproj
+++ b/AptitudeEngine/AptitudeEngine.csproj
@@ -70,9 +70,10 @@
     <Compile Include="Components\Flairs\Flair.cs" />
     <Compile Include="Components\Flairs\Label.cs" />
     <Compile Include="Components\Flairs\Slider.cs" />
-    <Compile Include="Components\Turtle\Turtle.cs" />
+    <Compile Include="Components\Turtle.cs" />
     <Compile Include="Components\Visuals\ParallaxManager.cs" />
     <Compile Include="Components\Visuals\PolyRenderer.cs" />
+    <Compile Include="Components\WaveGenerator.cs" />
     <Compile Include="DebugHandler.cs" />
     <Compile Include="DrawOptions.cs" />
     <Compile Include="DisplayDevice.cs" />
