--- a/AptitudeEngine/AptitudeEngine.csproj
+++ b/AptitudeEngine/AptitudeEngine.csproj
@@ -107,7 +107,7 @@
     <Compile Include="ScreenHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Texture2D.cs" />
-    <Compile Include="CoordinateSystem\AptRectangle.cs" />
+    <Compile Include="CoordinateSystem\Rectangle.cs" />
     <Compile Include="Assets\SpriteAsset.cs" />
     <Compile Include="Components\Visuals\SpriteAnimator.cs" />
     <Compile Include="Components\Visuals\SpriteRenderer.cs" />
@@ -118,9 +118,6 @@
     <None Include="App.config" />
     <None Include="OpenTK.dll.config" />
     <None Include="packages.config" />
-    <None Include="Settings.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
   <ItemGroup>
     <Content Include="favicon.ico" />
